--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>This is the main container element</p>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
